--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Nunito",Arial, Helvetica, sans-serif;
   background-color: #CAF0F8;
 }
 .header {
@@ -13,20 +13,27 @@ body {
 }
 .nav {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  background-color: #90E0EF;
+  background-color: #333;
   overflow: hidden;
+  padding-top: 0.5em;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.nav div{
+  flex: 1;
+  text-align: center;
 }
 .nav a {
-  color: #03045E;
-  text-align: center;
-  justify-content: center;
-  padding: 1.5em;
+  color: #f3f3f3;
+  display: block;
+  padding: 1rem;
   text-decoration: none;
   font-weight: bold;
   text-transform: uppercase;
-  min-height: 2.2em;
 }
 .nav a:hover {
   background-color: #ddd;
@@ -87,6 +94,47 @@ body {
 .footer-li-img{
   list-style-type: none;
   max-width: 80%;
-  padding: 0em 40em;
+  padding: 0em 20em;
+}
+.panel h2{
+  text-align:start;
+  justify-content: center;
+  text-transform: uppercase;
+  font-weight: bolder;
+  text-shadow: 0.2em;
+}
+.panel p{
+  text-align:start;
+  justify-content: center;
+}
+.logo{
+  width: 10%;
+  padding: 1%;
+  min-width: 10em;
 }
 
+.panel{
+  text-decoration: none;
+  padding: 7% 0;
+}
+.column{
+  text-align: center;
+  justify-content: center;
+  list-style-type: none;
+}
+.column-text{
+  margin: 1em auto;
+  max-width: 80%;
+}
+
+@media (max-width: 900px){
+  .panel{
+      text-decoration: none;
+      padding: 15% 0;
+  }
+  }
+  @media screen and (max-width: 600px) {
+    .nav a{
+      flex: 0 0 100%;
+    }
+  }
